# Nucleo

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  README.md  build.gradle.kts  commitlint.config.cjs  detekt.yaml  eslint.config.js  gradle.properties  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts  start-all-services.sh  stop-all-services.sh  tsconfig.base.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
ai-service/: Dockerfile  justfile
appointments-service/: .env.example  Dockerfile  build.gradle.kts  docker-compose.yml
build-logic/: build.gradle.kts
commons/: build.gradle.kts
docs/: conclusions.md  deployment.md  index.md  introduction.md
documents-service/: .env.example  Dockerfile  build.gradle.kts  docker-compose.yaml  docker-compose.yml
documents-service/ai-service/: .env.example  Dockerfile  justfile  main.py  pyproject.toml
documents-service/ai-service/src/: config.py  main.py
documents-service/ai-service/src/services/: __init__.py  ai_analyzer.py  pdf_extractor.py
frontend-service/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
gradle/: libs.version.toml  libs.versions.toml
kubernetes/: kafka-topics.yaml  kafka.yaml
master-data-service/: .env.example  Dockerfile  docker-compose.yml  jest.config.cjs  package.json  tsconfig.json
release/: README.md  release.config.cjs  scoped-commits-plugin.cjs  services.cjs
scripts/: deploy.sh  ktfmt-staged.sh  undeploy.sh  (+2 more)
(+586 files in other folders)
