[project]
name = "ai-service"
version = "0.1.0"
description = "AI service for medical document processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "groq>=1.0.0",
    "minio>=7.2.20",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

